# Lenguajes-de-Programas

./: README.md
Documentaciones/: Documentacion_CSharp_Guaicaipuro.ipynb  Documentacion_PHP_Guaicaipuro.ipynb  Documentacion_Ruby_Guaicaipuro.ipynb
Proyecto To Do List/: comandos.go  funciones_test.go  go.mod  go.sum  guardado.go  main.go  tarea.go  tareas.json
Proyecto To Do List/tareas/: add.go  delete.go  edit.go  modelo.go  read.go
Task Tracker Rust/: Cargo.toml  tareas.json
Task Tracker Rust/src/: comandos.rs  guardado.rs  lib.rs  main.rs
Task Tracker Rust/src/tareas/: add.rs  delete.rs  edit.rs  mod.rs  modelo.rs  read.rs
Task Tracker Rust/tests/: funciones_test.rs
